src/test/deca/context/invalid/Super_class_declared_under.deca
class A exrends B{
    float c;
}

class B {
    A a;
}